objects/ssot__ResearchStudy__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualFinalDbLockDate__c</fullName>
        <label>Actual Final Database Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualFirstPtcpEnrollmentDate__c</fullName>
        <label>Actual First Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualFirstPtcpFirstVisitDate__c</fullName>
        <label>Actual First Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualFirstPtcpLastVisitDate__c</fullName>
        <label>Actual First Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpEnrollmentDate__c</fullName>
        <label>Actual Last Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpFirstVisitDate__c</fullName>
        <label>Actual Last Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpLastVisitDate__c</fullName>
        <label>Actual Last Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BiospecRetentionType__c</fullName>
        <label>Biospec Retention Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BlindingTypeCodeId__c</fullName>
        <label>BlindingTypeCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareSpecialtyId__c</fullName>
        <label>Care Specialty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscontinuationReason__c</fullName>
        <label>Discontinuation Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleGender__c</fullName>
        <label>Eligible Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleMaximumAgeNumber__c</fullName>
        <label>Eligible Maximum Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleMinimumAgeNumber__c</fullName>
        <label>Eligible Minimum Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpEnrollmentDate__c</fullName>
        <label>Forecasted First Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpFirstVisitDate__c</fullName>
        <label>Forecasted First Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpLastVisitDate__c</fullName>
        <label>Forecasted First Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpEnrollmentDate__c</fullName>
        <label>Forecasted Last Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpFirstVisitDate__c</fullName>
        <label>Forecasted Last Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpLastVisitDate__c</fullName>
        <label>Forecasted Last Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Research Study Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InclusionExclusionCriteriaText__c</fullName>
        <label>Inclusion And Exclusion Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntentType__c</fullName>
        <label>Intent Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Phase__c</fullName>
        <label>Phase</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedFinalDbLockDate__c</fullName>
        <label>Planned Final Database Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryContactPhoneId__c</fullName>
        <label>Primary Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProtocolDocumentId__c</fullName>
        <label>Protocol Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationStatus__c</fullName>
        <label>Publication Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyNumber__c</fullName>
        <label>Research Study Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldAcptHealthyCandidates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Accept Healthy Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TitleText__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniformResourceIdentifier__c</fullName>
        <label>Uniform Resource Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667415949_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudy_CareProgramId_map_Care_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>ResearchStudy_CareProgramId_map_Care_rel</relationshipLabel>
        <relationshipName>rel_1716667415949_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667426448_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudy_BlindingTypeCodeId_map_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ResearchStudy_BlindingTypeCodeId_map_rel</relationshipLabel>
        <relationshipName>rel_1716667426448_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667434998_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudy_BlindingTypeCodeId_map_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ResearchStudy_BlindingTypeCodeId_map_rel</relationshipLabel>
        <relationshipName>rel_1716667434998_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>